--- a/cloudprojectmarker/package.json
+++ b/cloudprojectmarker/package.json
@@ -6,7 +6,9 @@
   "repository": "https://github.com/awslabs/aws-sam-cli/tree/develop/samcli/local/init/templates/cookiecutter-aws-sam-hello-nodejs",
   "author": "SAM CLI",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "cdk": "^1.81.0"
+  },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
